force-app/main/default/objects/DR_Quote_Test_Helper__mdt/DR_Quote_Test_Helper__mdt.object-meta.xml
<CustomObject>
    <description>SOQ-15-Helper table to have the master data used to create Opp Reg opportunity in test classes</description>
    <label>DR Quote Test Helper</label>
    <pluralLabel>DR Quote Test Helper</pluralLabel>
</CustomObject>