force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>Deal Type in Opportunity</description>
    <label>Deal Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>