force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account__c</fullName>
    <description>AccountId in Opporunity</description>
    <label>End Customer Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>