force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/End_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Contact__c</fullName>
    <description>Primary End Customer Contact used in Opportunity</description>
    <label>End Customer Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>