force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/End_Customer_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Contact_Role__c</fullName>
    <description>Primary End Customer Contact role in Opportunity</description>
    <label>End Customer Contact Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>