force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/OppRegLeadId__c.field-meta.xml
<CustomField>
    <fullName>OppRegLeadId__c</fullName>
    <description>Opp Reg Lead Id</description>
    <label>OppRegLeadId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>