force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Partner_VAR_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_VAR_Account__c</fullName>
    <description>SP/VAR used in Opportunity</description>
    <label>Partner/VAR Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>