force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Partner_VAR_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_VAR_Contact__c</fullName>
    <description>Partner/VAR Contact used in Opportunity</description>
    <label>Partner/VAR Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>