force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <description>Picebook for Opp</description>
    <label>PriceBookId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>