force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Primary_HW_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_HW_Product__c</fullName>
    <description>Primary Product in Opp Rgg</description>
    <label>Primary HW Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>