force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Primary_Support_SKU__c.field-meta.xml
<CustomField>
    <fullName>Primary_Support_SKU__c</fullName>
    <description>Primary Support SKU for Opp Reg</description>
    <label>Primary Support SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>