force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Program Type in Opportunity</description>
    <label>Program Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>