force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <description>Record Type Id of the Opportunity
Opp Regs get Enterprise Sales Opportunity record type</description>
    <label>RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>