force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Secondary_HW_Product__c.field-meta.xml
<CustomField>
    <fullName>Secondary_HW_Product__c</fullName>
    <description>Secondary Product in Opp Reg</description>
    <label>Secondary HW Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>