force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Secondary_Support_SKU__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Support_SKU__c</fullName>
    <description>Secondary SUMS/Support in Opp Reg</description>
    <label>Secondary Support SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>