force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Opportunity Stage</description>
    <label>Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>