force-app/main/default/objects/DR_Quote_Test_Helper__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Opportunity Type</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>